--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <p>Welcome!</p>
+    <main>
+        <h2 class="main">hello!</h2>
+    </main>
 </body>
 </html>
