--- a/index.html
+++ b/index.html
@@ -5,22 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="grid">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
-    <div class="item item2">reklam</div>
-    <div class="item">10</div>
-    <div class="item">11</div>
-    <div class="item">15</div>
+    <div class="landing">
+            <video autoplay muted loop>
+                <source src="./Static/city.mp4" type="video/mp4">
+            </video>
+        <div class="landing-content">
+
+            <div class="header">
+                <h2>INTERIOR</h2>
+                <div class="nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Studio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+                </div>
+                <div class="lang">
+                    <img src="./Static/tr.png" height="35" alt="tr-TR" />
+                </div>
+            </div>
+
+            <div class="content">
+                <span>Architecture</span>
+                <h1>INTERIOR DESIGN</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, esse.</p>
+            </div>
+
+            <div class="landing-footer">
+                <div class="divider">01</div>
+                <div class="section-1">
+                    <h2>Interior Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, vero!</p>
+                </div>
+                <div class="divider">02</div>
+                <div class="section-2">
+                    <h2>IArchitecture</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, dicta eligendi!</p>
+            </div>
+            <div class="divider">03</div>
+            <div class="section-3">
+                <h2>Exterior Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aliquid magnam itaque.</p>
+        </div>
+    </div>
+</div>
 </div>
 </body>
 </html>
