--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="landing">
@@ -45,7 +46,7 @@
                 </div>
                 <div class="divider">02</div>
                 <div class="section-2">
-                    <h2>IArchitecture</h2>
+                    <h2>Architecture</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, dicta eligendi!</p>
             </div>
             <div class="divider">03</div>
@@ -56,5 +57,16 @@
     </div>
 </div>
 </div>
+
+        <div class="main">
+            <div class="card-grid">
+                <div class="card">
+                    <img src="./Static/flat.jpg" />
+                </div>
+            </div>
+            <div class="card-footer">
+                
+            </div>
+        </div>
 </body>
 </html>
