--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <header class=" bg-amber-200 flex justify-between items-center p-5">
+        <h2 class="text-sm md:text-2xl font-bold">Compay Inc.</h2>
+
+        <div class="hidden md:block">
+            <ul class="flex gap-20">
+                <li class="uppercase font-bold text-gray-700">Homepage</li>
+                <li class="uppercase font-bold text-gray-700">Pricing</li>
+                <li class="uppercase font-bold text-gray-700">Contact Us</li>
+            </ul>
+        </div>
+
+        <div>
+            <button class="bg-emerald-600 text-white px-4 py-4 rounded-full">Request a Demo</button>
+        </div>
+
+    </header>
 </body>
 </html>
