--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class=" bg-amber-200 flex justify-between items-center p-5">
-        <h2 class="text-sm md:text-2xl font-bold">Compay Inc.</h2>
+    <header class=" bg-amber-200 flex justify-between    items-center p-5">
+        <a href="#"><i class="fa-solid fa-bars md:hidden"></i></a>
+
 
         <div class="hidden md:block">
-            <ul class="flex gap-20">
-                <li class="uppercase font-bold text-gray-700">Homepage</li>
-                <li class="uppercase font-bold text-gray-700">Pricing</li>
-                <li class="uppercase font-bold text-gray-700">Contact Us</li>
+            <ul class="flex gap-20 ">
+                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Homepage</li>
+                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Pricing</li>
+                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Contact Us</li>
             </ul>
         </div>
 
         <div>
-            <button class="bg-emerald-600 text-white px-4 py-4 rounded-full">Request a Demo</button>
+            <button class="bg-indigo-600 text-white px-2 py-2  md:px-4 md:py-4 rounded-full">Request a Demo</button>
         </div>
 
     </header>
+
+    <main>
+        <p class="bg-gray-100 m-5 p-[22px] rounded text-xl">Hello World</p>
+    </main>
 </body>
 </html>
