--- a/index.html
+++ b/index.html
@@ -5,30 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js"></script>
     <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class=" bg-amber-200 flex justify-between    items-center p-5">
-        <a href="#"><i class="fa-solid fa-bars md:hidden"></i></a>
-
-
-        <div class="hidden md:block">
-            <ul class="flex gap-20 ">
-                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Homepage</li>
-                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Pricing</li>
-                <li class="uppercase font-bold text-gray-700 border-b-2 border-black">Contact Us</li>
-            </ul>
-        </div>
-
-        <div>
-            <button class="bg-indigo-600 text-white px-2 py-2  md:px-4 md:py-4 rounded-full">Request a Demo</button>
-        </div>
-
-    </header>
-
-    <main>
-        <p class="bg-gray-100 m-5 p-[22px] rounded text-xl">Hello World</p>
-    </main>
+    <h2 class="bg-white text-center">Welcome!</h2>
 </body>
 </html>
