--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 <body>
       <h2 class="bg-white text-center">Welcome!</h2>
