--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./scripts/script_4.js"></script>
-    <!--<script src="./scripts/scrip_3.js"></script>         -->
-    <!-- <script src="./scripts/scrit_2.js"></script>        -->
-    <!-- <script defer src="./scripts/script_1.js"></script> -->
+    <!-- <script src="./scripts/script_3.js"></script>        -->
+    <!-- <script src="./scripts/script_2.js"></script>        -->
+    <!-- <script src="./scripts/script_1.js"></script>        -->
 </head>
 <body>
       <h2 class="bg-white text-center">Welcome!</h2>
