--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <!-- <script src="./scripts/script_1.js"></script>        -->
 </head>
 <body>
-      <h2 class="bg-white text-center">Welcome!</h2>
+      <h2 class="bg-white p-10 text-center">Welcome!</h2>
 </body>
 </html>
