--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./scripts/script_5.js"></script>
+    <script src="./scripts/script_6.js"></script>
+    <!-- <script src="./scripts/script_5.js"></script>        -->
     <!-- <script src="./scripts/script_4.js"></script>        -->
     <!-- <script src="./scripts/script_3.js"></script>        -->
     <!-- <script src="./scripts/script_2.js"></script>        -->
