--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://kit.fontawesome.com/a6807f22f4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a6807f22f4.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./scripts/script_7.js"></script>
+    <script defer src="scripts/script_8.js"></script>
+    <!-- <script src="./scripts/script_7.js"></script>        -->
     <!-- <script src="./scripts/script_6.js"></script>        -->
     <!-- <script src="./scripts/script_5.js"></script>        -->
     <!-- <script src="./scripts/script_4.js"></script>        -->
     <!-- <script src="./scripts/script_3.js"></script>        -->
     <!-- <script src="./scripts/script_2.js"></script>        -->
     <!-- <script src="./scripts/script_1.js"></script>        -->
-</head>
-<body>
-      <h2 class="bg-white p-10 text-center">Welcome!</h2>
-</body>
+  </head>
+  <body>
+    <h2 class="bg-white p-10 text-center" id="baslik">Welcome!</h2>
+    <img src="https://picsum.photos/200" id="random-gorsel" />
+    <p id="paragraf">Merhaba!</p>
+
+    <h3 class="uby">selam!</h3>
+    <p class="uby">selam2</p>
+    <div id="selam-ver">
+      <p>Merhaba dünya!</p>
+      <b>Bugün hava soğuk.</b>
+    </div>
+
+    <input type="text" name="username" placeholder="kullanıcı adı" />
+
+    <span id="degisecek-metin">Buradaki metin değişecek</span>
+    <br/>
+    <br/>
+    <br/>
+   <div class="bg-white">
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+    <p class="eleman">merhaba</p>
+  </div>
+  </body>
 </html>
