--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   </head>
   <body>
     <h2 class="bg-white p-10 text-center" id="baslik">Welcome!</h2>
-    <img src="https://picsum.photos/200" id="random-gorsel" />
     <p id="paragraf">Merhaba!</p>
 
     <h3 class="uby">selam!</h3>
@@ -35,21 +34,35 @@
     <input type="text" name="username" placeholder="kullanıcı adı" />
 
     <span id="degisecek-metin">Buradaki metin değişecek</span>
-    <br/>
-    <br/>
-    <br/>
-   <div class="bg-white">
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-    <p class="eleman">merhaba</p>
-  </div>
+    <br />
+    <br />
+    <br />
+    <div>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+      <p class="eleman">merhaba</p>
+    </div>
+
+    <div>
+      <h>Merhaba, Deniz</h>
+      <ul>
+        <h2>Alışveriş Listesi</h2>
+        <li>Süt</li>
+        <li>Peynir</li>
+        <li id="alinacak-urun">
+          <a href="#">Yumurta</a>
+        </li>
+        <li>Zeytinyağı</li>
+        <li>Bulaşık deterjanı</li>
+      </ul>
+    </div>
   </body>
 </html>
