--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="scripts/script_8.js"></script>
+    <script defer src="scripts/script_9.js"></script>
+    <!-- <script defer src="scripts/script_8.js"></script>    -->
     <!-- <script src="./scripts/script_7.js"></script>        -->
     <!-- <script src="./scripts/script_6.js"></script>        -->
     <!-- <script src="./scripts/script_5.js"></script>        -->
@@ -21,48 +22,8 @@
     <!-- <script src="./scripts/script_1.js"></script>        -->
   </head>
   <body>
+  <div class="flex items-center justify-center w-2/4" >
     <h2 class="bg-white p-10 text-center" id="baslik">Welcome!</h2>
-    <p id="paragraf">Merhaba!</p>
-
-    <h3 class="uby">selam!</h3>
-    <p class="uby">selam2</p>
-    <div id="selam-ver">
-      <p>Merhaba dünya!</p>
-      <b>Bugün hava soğuk.</b>
-    </div>
-
-    <input type="text" name="username" placeholder="kullanıcı adı" />
-
-    <span id="degisecek-metin">Buradaki metin değişecek</span>
-    <br />
-    <br />
-    <br />
-    <div>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-      <p class="eleman">merhaba</p>
-    </div>
-
-    <div>
-      <h>Merhaba, Deniz</h>
-      <ul>
-        <h2>Alışveriş Listesi</h2>
-        <li>Süt</li>
-        <li>Peynir</li>
-        <li id="alinacak-urun">
-          <a href="#">Yumurta</a>
-        </li>
-        <li>Zeytinyağı</li>
-        <li>Bulaşık deterjanı</li>
-      </ul>
-    </div>
+  </div>
   </body>
 </html>
